--- a/index.html
+++ b/index.html
@@ -1,1 +1,65 @@
-"hello world" 
+<!DOCTYPE html>
+<html>
+<head>
+  <title>YOUR NAME - Software Engineer</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+  <nav>
+    <a href="#about">About</a>
+    <a href="#experience">Experience</a>
+    <a href="#projects">Projects</a>
+    <a href="#education">Education</a>
+    <a href="#skills">Skills</a>
+    <a href="#contact">Contact</a>
+  </nav>
+
+  <header>
+    <div class="header-content">
+      <h1>YOUR NAME</h1>
+      <h2>Software Engineer</h2>
+      <a href="https://www.linkedin.com/in/YOUR-LINKEDIN-PROFILE/" target="_blank"><i class="fa fa-linkedin"></i></a>
+      <a href="https://github.com/YOUR-GITHUB-USERNAME" target="_blank"><i class="fa fa-github"></i></a>
+    </div>
+  </header>
+
+  <main>
+    <section id="about">
+      <h2>About Me</h2>
+      <p>YOUR SUMMARY/INTRODUCTION FROM YOUR RESUME HERE</p>
+    </section>
+
+   <section class="section section--experience">
+    <div class="container">
+      <h2 class="section__title">Experience</h2>
+      <div class="timeline">
+        <div class="timeline__item">
+          <h3 class="timeline__title">Graduate Assistant</h3>
+          <h4 class="timeline__subtitle">University of Florida</h4>
+          <p class="timeline__date">Jan 2022 - Present</p>
+          <p class="timeline__description">Developed a full-stack web application using Golang and ReactJS, providing a user-friendly interface and fast performance. Leveraged Golang’s strong typing, concurrency, and scalability features to build a robust backend that handles large amounts of data and traffic. Utilized ReactJS’s component-based architecture and virtual DOM to create a responsive and dynamic front-end that delivers a seamless user experience. Designed and implemented RESTful APIs using Django REST framework, enabling seamless communication with client-side applications. Utilized Django’s built-in authentication and authorization system to secure sensitive data and provide controlled access to resources. Utilized Git for version control and collaborated with a team of developers to ensure efficient development and deployment using agile methodologies.</p>
+        </div>
+        <div class="timeline__item">
+          <h3 class="timeline__title">Software Engineer Intern</h3>
+          <h4 class="timeline__subtitle">Virtual Review Assist, USA</h4>
+          <p class="timeline__date">May 2022 - Aug 2022</p>
+          <p class="timeline__description">Successfully migrated databases to Azure using Cloud and Container Services, ensuring data integrity and minimal downtime. Optimized and managed Azure services, VMs, and AzureAD, improving overall system performance and reducing costs. Implemented secure Auth0 authentication with JWT for various applications, ensuring efficient access management. Deployed streamlined CI/CD systems using various tools such as Azure DevOps, Jenkins and Kubernetes. Utilized ETL processes for seamless data integration across systems. Ensured business continuity with an established disaster recovery plan using Azure Site Recovery and Backup services. Collaborated effectively with cross-functional teams throughout the development lifecycle. Proficient in Windows Server administration and automation with PowerShell and possess strong operational understanding of hybrid cloud integration.</p>
+        </div>
+        <div class="timeline__item">
+          <h3 class="timeline__title">Software Engineer</h3>
+          <h4 class="timeline__subtitle">OCT Infotech Pvt Ltd, India</h4>
+          <p class="timeline__date">Jun 2020 - Jul 2021</p>
+          <p class="timeline__description">As a member of the core Architecture team, developed and maintained the core C++ (MFC) framework for software product while collaborating with other team members to ensure efficient development of tools and buttons. Led the successful migration of the UI framework from legacy MFC to Qt Framework, resulting in improved user experience and product efficiency. Successfully implemented generic features to support high-level modules and performed proof of concept to build a hybrid desktop and web application using Qt Web engine, OpenGL, and web technologies. Proficient in Python and Bash scripting, with experience in automating tasks such as infrastructure provisioning, testing, and deployment pipelines. Experienced in testing processes such as regression, integration, and unit testing, with an understanding of their importance in ensuring software quality. Strong knowledge of C++ project/build tooling (CMake, CTest) and the ability to read C++ code and assist developers with C++ related challenges.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+  </main>
+  
+  </body>
+</html>
