--- a/index.html
+++ b/index.html
@@ -28,10 +28,25 @@
     </div>
   </header>
 
+
   <main>
     <section id="about">
       <h2>About Me</h2>
-      <p>YOUR SUMMARY/INTRODUCTION FROM YOUR RESUME HERE</p>
+      <p>
+        Hello, my name is John Doe and I am a software engineer with experience in full-stack web development, cloud computing, and C++ programming. I have a passion for creating clean and efficient code that solves real-world problems and improves user experience.
+      </p>
+      <p>
+        During my time as a graduate assistant at the University of Florida, I developed a full-stack web application using Golang and ReactJS, utilizing Golang's strong typing, concurrency, and scalability features to build a robust backend that handles large amounts of data and traffic, and ReactJS's component-based architecture and virtual DOM to create a responsive and dynamic front-end that delivers a seamless user experience.
+      </p>
+      <p>
+        As a software engineer intern at Virtual Review Assist, I successfully migrated databases to Azure using cloud and container services, implemented secure authentication with JWT, and deployed streamlined CI/CD systems using various tools such as Azure DevOps, Jenkins, and Kubernetes.
+      </p>
+      <p>
+        At OCT Infotech Pvt Ltd, I was a member of the core architecture team and developed and maintained the core C++ (MFC) framework for a software product, led the successful migration of the UI framework from legacy MFC to Qt Framework, and implemented generic features to support high-level modules. I also have experience in automating tasks with Python and Bash scripting and testing processes such as regression, integration, and unit testing.
+      </p>
+      <p>
+        I am a highly motivated individual with strong problem-solving skills and the ability to work effectively both independently and as part of a team. I am always seeking new challenges and opportunities to expand my skill set and contribute to innovative projects.
+      </p>
     </section>
 
    <section class="section section--experience">
