--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <section id="about">
       <h2>About Me</h2>
       <p>
-        Hello, my name is John Doe and I am a software engineer with experience in full-stack web development, cloud computing, and C++ programming. I have a passion for creating clean and efficient code that solves real-world problems and improves user experience.
+        Hello, my name is Venkateswarlu Tanneru and I am a software engineer with experience in full-stack web development, cloud computing, and C++ programming. I have a passion for creating clean and efficient code that solves real-world problems and improves user experience.
       </p>
       <p>
         During my time as a graduate assistant at the University of Florida, I developed a full-stack web application using Golang and ReactJS, utilizing Golang's strong typing, concurrency, and scalability features to build a robust backend that handles large amounts of data and traffic, and ReactJS's component-based architecture and virtual DOM to create a responsive and dynamic front-end that delivers a seamless user experience.
