--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
   <header>
     <div class="header-content">
-      <h1>YOUR NAME</h1>
+      <h1>Venkateswarlu Tanneru</h1>
       <h2>Software Engineer</h2>
       <a href="https://www.linkedin.com/in/YOUR-LINKEDIN-PROFILE/" target="_blank"><i class="fa fa-linkedin"></i></a>
       <a href="https://github.com/YOUR-GITHUB-USERNAME" target="_blank"><i class="fa fa-github"></i></a>
@@ -49,7 +49,7 @@
       </p>
     </section>
 
-   <section class="section section--experience">
+   <section id = "experience" class="section section--experience">
     <div class="container">
       <h2 class="section__title">Experience</h2>
       <div class="timeline">
@@ -74,6 +74,38 @@
       </div>
     </div>
   </section>
+  
+  <section id = "projects">
+  <h2>Technical Experience</h2>
+  <h3>Academic Projects</h3>
+  <ul>
+    <li>
+      <strong>Database System Implementation</strong>: Developed a single-user database management system using C++, Linux, and CMake for a database systems course. Implemented relational algebra operations using Gtest for testing and gained knowledge of database internals such as indexing, query evaluation, optimization, recovery, and concurrency control. Proficiently managed dependencies and built the project using CMake. Ran the system successfully on WSL, demonstrating skills in Linux command-line and shell scripting. Delivered a fully functional system with SQL queries, backup and recovery, database security, and transaction management capabilities.
+    </li>
+    <li>
+      <strong>Machine Learning - Differential Privacy</strong>: Developed an efficient data distillation for robustness of a Machine Learning algorithm using Python, TensorFlow, and Keras for machine learning models, resulting in higher accuracy and faster training times.
+    </li>
+    <li>
+      <strong>Neural Networks</strong>: Designed and implemented a neural network in Python using various machine learning libraries for accurate number prediction, and developed a convolutional neural network (CNN) and recurrent neural network (RNN) using TensorFlow and Keras to predict S&P 500 stock data. Utilized techniques such as normalization, regularization, and hyperparameter tuning to optimize model performance, achieving high accuracy and low error rates.
+    </li>
+    <li>
+      <strong>Computer Networks</strong>: Successfully developed a P2P file sharing software similar to BitTorrent using Java, implementing the choking-unchoking mechanism, a critical feature of BitTorrent. Implemented the protocol consisting of a handshake followed by a never-ending stream of length-prefixed messages, ensuring a symmetrical interaction between two peers. Established reliable connections between peers, allowing for seamless file management operations.
+    </li>
+    <li>
+      <strong>Flow Simulation</strong>: Conducted research on the effects of divergent angle variations in 3D CD nozzles by analyzing flow patterns at different air velocities using both the high-speed jet facility and CFD simulations on the Ansys software. Successfully utilized schlieren technique to capture shocks within the nozzle, enabling detailed flow analysis. Designed and modeled the 3D CD nozzles using Catia and SolidWorks for experimental and simulation purposes.
+    </li>
+    <li>
+      <strong>Penetration Testing</strong>: My involvement with the Open Web Application Security Project (OWASP) has allowed me to leverage my expertise and volunteer my time towards various projects and initiatives that aim to improve software security. My commitment to this field is further demonstrated through completing coursework on penetration testing, which provided practical experience with commonly used tools such as Nessus, Pfsense, and John the Ripper. This coursework has helped me to develop a solid understanding of how to identify and exploit vulnerabilities, and the importance of this process in maintaining a secure system.
+    </li>
+  </ul>
+  <h3>Languages and Technologies</h3>
+  <ul>
+    <li>C++,Python,Golang,React.Js,Bash,MsSQL,MongoDB,MFC,QT,.NET,Django,PyQT</li>
+    <li>Linux,Cmake,Gtest,Git,Azure,Docker,Splunk,Kubernetes,Powershell</li>
+  </ul>
+</section>
+
+    
   </main>
   
   </body>
