--- a/index.html
+++ b/index.html
@@ -20,12 +20,15 @@
   </nav>
 
   <header>
+    <section id = "contact">
     <div class="header-content">
       <h1>Venkateswarlu Tanneru</h1>
       <h2>Software Engineer</h2>
       <a href="https://www.linkedin.com/in/YOUR-LINKEDIN-PROFILE/" target="_blank"><i class="fa fa-linkedin"></i></a>
       <a href="https://github.com/YOUR-GITHUB-USERNAME" target="_blank"><i class="fa fa-github"></i></a>
-    </div>
+      <P>Contact: 352-328-2787</p>
+     </div>
+    </section>
   </header>
 
 
@@ -48,6 +51,22 @@
         I am a highly motivated individual with strong problem-solving skills and the ability to work effectively both independently and as part of a team. I am always seeking new challenges and opportunities to expand my skill set and contribute to innovative projects.
       </p>
     </section>
+
+    <section id="education">
+      <h2>Education</h2>
+      <div class="education-item">
+        <h3>University of Florida</h3>
+        <p>Gainesville, FL | Aug 2021 - May 2023 (Expected)</p>
+        <p>M.S. in Computer Science, GPA: 3.73</p>
+        <p>Graduate Coursework: Design and Analysis of Algorithms, Operating Systems, Object-Oriented Design and Development, Database System Implementation, Software Engineering, Machine Learning, Neural Networks.</p>
+      </div>
+      <div class="education-item">
+        <h3>Hindustan University</h3>
+        <p>Chennai, India | Aug 2016 - Apr 2020</p>
+        <p>Bachelor of Engineering in Aeronautical Sciences, GPA: 4(8.79/10)</p>
+      </div>
+    </section>
+
 
    <section id = "experience" class="section section--experience">
     <div class="container">
@@ -98,12 +117,15 @@
       <strong>Penetration Testing</strong>: My involvement with the Open Web Application Security Project (OWASP) has allowed me to leverage my expertise and volunteer my time towards various projects and initiatives that aim to improve software security. My commitment to this field is further demonstrated through completing coursework on penetration testing, which provided practical experience with commonly used tools such as Nessus, Pfsense, and John the Ripper. This coursework has helped me to develop a solid understanding of how to identify and exploit vulnerabilities, and the importance of this process in maintaining a secure system.
     </li>
   </ul>
-  <h3>Languages and Technologies</h3>
+  </section>
+    
+  <section id = "skills">
+  <h2>Languages and Technologies</h3>
   <ul>
     <li>C++,Python,Golang,React.Js,Bash,MsSQL,MongoDB,MFC,QT,.NET,Django,PyQT</li>
     <li>Linux,Cmake,Gtest,Git,Azure,Docker,Splunk,Kubernetes,Powershell</li>
   </ul>
-</section>
+  </section>
 
     
   </main>
