--- a/index.html
+++ b/index.html
@@ -116,6 +116,8 @@
     <li>
       <strong>Penetration Testing</strong>: My involvement with the Open Web Application Security Project (OWASP) has allowed me to leverage my expertise and volunteer my time towards various projects and initiatives that aim to improve software security. My commitment to this field is further demonstrated through completing coursework on penetration testing, which provided practical experience with commonly used tools such as Nessus, Pfsense, and John the Ripper. This coursework has helped me to develop a solid understanding of how to identify and exploit vulnerabilities, and the importance of this process in maintaining a secure system.
     </li>
+    <li>
+      <strong>Advanced Blockchain</strong>: Developed a blockchain-based authentication system for a network of IoT devices. The project requires research on the most appropriate blockchain model to use and understanding the benefits and limitations of using blockchain technology for IoT device authentication. The project also involves creating digital certificates for each device and defining rules for device authentication using smart contracts. The system will be deployed on a network of IoT devices and evaluated for its effectiveness in providing secure and decentralized authentication. The team will consider issues related to cybersecurity and data privacy throughout the project. The final report will detail the research, design, and implementation of the authentication system, and the results of testing and evaluation. This project will contribute to the growing body of knowledge in the field of blockchain-based authentication for IoT devices. 
   </ul>
   </section>
     
