--- a/index.html
+++ b/index.html
@@ -118,7 +118,11 @@
     </li>
     <li>
       <strong>Advanced Blockchain</strong>: Developed a blockchain-based authentication system for a network of IoT devices. The project requires research on the most appropriate blockchain model to use and understanding the benefits and limitations of using blockchain technology for IoT device authentication. The project also involves creating digital certificates for each device and defining rules for device authentication using smart contracts. The system will be deployed on a network of IoT devices and evaluated for its effectiveness in providing secure and decentralized authentication. The team will consider issues related to cybersecurity and data privacy throughout the project. The final report will detail the research, design, and implementation of the authentication system, and the results of testing and evaluation. This project will contribute to the growing body of knowledge in the field of blockchain-based authentication for IoT devices. 
-  </ul>
+    </li>
+    <li>
+      <strong>Distributed Systems</strong>: Worked on implementing code in Erlang for Bitcoin Mining, Gossip Algorithm , Chord - P2P and Simulation and a Twitter Clone uisng Rebar Framework and in which i used Erlang Conncurency to achieve functionalities like Login,Logout,Tweet,Retweet and Subscribe . Utilized socket functionalities for establishing communication betwen clients.
+    </li>
+   </ul>
   </section>
     
   <section id = "skills">
