Changes in code

--- a/skills.html
+++ b/skills.html
@@ -57,7 +57,7 @@
     <body style="color: white;">
         <header style="display: flex; color: white; justify-content: flex-start; align-items: center;">
             <nav>
-              <a href="mainpage.html" class="home-button">&larr; Home</a>
+              <a href="index.html" class="home-button">&larr; Home</a>
             </nav>
         </header>
         <main>
