--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
   <body style="color: white;">
     <header style="display: flex; justify-content: flex-start; align-items: center;">
       <nav>
-        <a href="mainpage.html" class="home-button">&larr; Home</a>
+        <a href="index.html" class="home-button">&larr; Home</a>
       </nav>
     </header>
 
